--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -14,3 +14,14 @@ stages:
       - "607"
       - "803"
       - "886"
+  productionDeployment:
+    cfTargets:
+      - org: 'P2001099548trial_trial'
+        space: 'dev'
+        apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
+        appName: 'devops-docker-images-IT'
+        manifest: 'manifest.yml'
+        credentialsId: 'devops-docker-images-IT-cf'
+    appUrls:
+      - url: 'https://devops-docker-images-it.cfapps.eu10.hana.ondemand.com'
+        credentialId: 'devops-docker-images-IT-cf'
