--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -1,5 +1,5 @@
 general:
-  productiveBranch: 'infrastructure-integration-test-cf'
+  productiveBranch: 'master'
   collectTelemetryData: false
 steps:
   cloudFoundryDeploy:
