--- a/jenkins.yml
+++ b/jenkins.yml
@@ -26,4 +26,4 @@ credentials:
               id: "devops-docker-images-IT-cf"
               username: ${CX_INFRA_IT_CF_USERNAME}
               password: ${CX_INFRA_IT_CF_PASSWORD}
-              description: "SAP CP Trail account."
+              description: "SAP CP Trial account."
