--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -2,3 +2,7 @@ general:
   productiveBranch: 'master'
   collectTelemetryData: false
   automaticVersioning: false
+steps:
+  mtaBuild:
+    mtaBuildTool: "cloudMbt"
+
