--- a/jenkins.yml
+++ b/jenkins.yml
@@ -11,7 +11,7 @@ unclassified:
             git:
               remote: "https://github.com/SAP/cloud-s4-sdk-pipeline-lib.git"
     - defaultVersion: "master"
-      name: "piper-library-os"
+      name: "piper-lib-os"
       retriever:
         modernSCM:
           scm:
