--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -1,8 +1,8 @@
 general:
   productiveBranch: 'master'
   collectTelemetryData: false
-  automaticVersioning: false
 steps:
   mtaBuild:
     mtaBuildTool: "cloudMbt"
-
+  artifactPrepareVersion:
+    versioningType: 'library'
