--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -1,12 +1,13 @@
 general:
   productiveBranch: 'master'
   collectTelemetryData: false
-  automaticVersioning: false
 steps:
   cloudFoundryDeploy:
     dockerImage: localhost:5000/ppiper/cf-cli
   executeNpm:
     dockerImage: 's4sdk/docker-node-browsers:v15'
+  artifactPrepareVersion:
+    versioningType: 'library'
 stages:
   productionDeployment:
     cfTargets:
