--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-**/credentials.*
-**/target/
-/s4hana_pipeline
-**/*.log
-**/*.trc
-**/.settings/
-**/.project
-**/.classpath
-**/.idea
-**/*.iml
-**/.vscode
-**/node_modules
-**/.DS_Store
-docs/.sass-cache/
-docs/_site/
+node_modules
+dist
+deployment
+s4hana_pipeline/
