--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -8,6 +8,19 @@ stages:
       - 1068
       - 1070
       - 1184
+  endToEndTests:
+    appUrls:
+      - url: 'https://devops-docker-images-it.cfapps.eu10.hana.ondemand.com/'
+        parameters: '--NIGHTWATCH_ENV=chrome'
+      - url: 'https://approuter-cloudpot.cfapps.sap.hana.ondemand.com'
+        parameters: '--NIGHTWATCH_ENV=firefox'
+    cfTargets:
+      - org: 'piper'
+        space: 'infra-testing'
+        apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
+        appName: 'devops-docker-images-IT'
+        manifest: 'manifest.yml'
+        credentialsId: 'devops-docker-images-IT-cf'
   productionDeployment:
     cfCreateServices:
       - serviceManifest: 'services-manifest.yml'
