--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -45,3 +45,5 @@ steps:
     space: infra-testing
     appName: 'devops-docker-images-IT'
     manifest: manifest.yml
+  executeNpm:
+    dockerImage: 'ppiper/node-browsers:v4'
