--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -12,10 +12,10 @@ stages:
     appUrls:
       - url: 'https://devops-docker-images-it.cfapps.eu10.hana.ondemand.com/'
         credentialId: devops-docker-images-IT-cf
-        parameters: '--NIGHTWATCH_ENV=chrome'
+        parameters: ['--NIGHTWATCH_ENV=chrome']
       - url: 'https://devops-docker-images-it.cfapps.eu10.hana.ondemand.com/'
         credentialId: devops-docker-images-IT-cf
-        parameters: '--NIGHTWATCH_ENV=firefox'
+        parameters: ['--NIGHTWATCH_ENV=firefox']
     cfTargets:
       - org: 'piper'
         space: 'infra-testing'
