--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -113,11 +113,13 @@
             <groupId>org.apache.tomee</groupId>
             <artifactId>arquillian-tomee-embedded</artifactId>
             <scope>test</scope>
+            <version>8.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-embedded</artifactId>
             <scope>test</scope>
+            <version>8.0.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -133,6 +135,7 @@
             <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-jaxrs</artifactId>
             <scope>test</scope>
+            <version>8.0.3</version>
         </dependency>
     </dependencies>
 
