--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -10,14 +10,14 @@
     <version>1.0</version>
 
     <parent>
-        <groupId>com.sap.cloud.s4hana.examples</groupId>
+        <groupId>com.sap.cloud.sdk.examples</groupId>
         <artifactId>address-manager</artifactId>
         <version>1.0</version>
     </parent>
 
     <properties>
         <surefire.skipTests>false</surefire.skipTests>
-        <surefire.forkCount>1</surefire.forkCount>
+        <surefire.forkCount>0</surefire.forkCount>
         <surefire.include>*</surefire.include>
         <surefire.exclude/>
         <surefire.groups/>
@@ -42,7 +42,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.sap.cloud.s4hana.examples</groupId>
+            <groupId>com.sap.cloud.sdk.examples</groupId>
             <artifactId>address-manager-application</artifactId>
             <classifier>classes</classifier>
             <version>1.0</version>
@@ -55,22 +55,22 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sap.cloud.s4hana.cloudplatform</groupId>
+            <groupId>com.sap.cloud.sdk.cloudplatform</groupId>
             <artifactId>scp-cf</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sap.cloud.s4hana</groupId>
+            <groupId>com.sap.cloud.sdk.s4hana</groupId>
             <artifactId>s4hana-all</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sap.cloud.s4hana</groupId>
-            <artifactId>testutil</artifactId>
+            <groupId>com.sap.cloud.sdk.testutil</groupId>
+            <artifactId>testutil-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sap.cloud.s4hana.quality</groupId>
+            <groupId>com.sap.cloud.sdk.quality</groupId>
             <artifactId>listeners-all</artifactId>
             <scope>test</scope>
         </dependency>
@@ -107,6 +107,7 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+            <version>4.3.1</version>
         </dependency>
 
         <dependency>
@@ -144,7 +145,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>0.8.5</version>
                 <configuration>
                     <destFile>${jacoco.executionDataFile}</destFile>
                     <dataFile>${jacoco.executionDataFile}</dataFile>
@@ -164,7 +165,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <skipTests>${surefire.skipTests}</skipTests>
                     <includes>
