--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -32,3 +32,7 @@ steps:
     space: infra-testing
     appName: 'devops-docker-images-IT'
     manifest: manifest.yml
+  artifactPrepareVersion:
+    dockerImage: 'maven:3.6.3-jdk-11'
+  mavenExecute:
+    dockerImage: 'maven:3.6.3-jdk-11'
