--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0</version>
 
     <parent>
-        <groupId>com.sap.cloud.sdk.examples</groupId>
+        <groupId>com.sap.cloud.s4hana.examples</groupId>
         <artifactId>address-manager</artifactId>
         <version>1.0</version>
     </parent>
@@ -42,7 +42,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.sap.cloud.sdk.examples</groupId>
+            <groupId>com.sap.cloud.s4hana.examples</groupId>
             <artifactId>address-manager-application</artifactId>
             <classifier>classes</classifier>
             <version>1.0</version>
@@ -55,22 +55,22 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sap.cloud.sdk.cloudplatform</groupId>
+            <groupId>com.sap.cloud.s4hana.cloudplatform</groupId>
             <artifactId>scp-cf</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sap.cloud.sdk.s4hana</groupId>
+            <groupId>com.sap.cloud.s4hana</groupId>
             <artifactId>s4hana-all</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sap.cloud.sdk.testutil</groupId>
-            <artifactId>testutil-core</artifactId>
+            <groupId>com.sap.cloud.s4hana</groupId>
+            <artifactId>testutil</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sap.cloud.sdk.quality</groupId>
+            <groupId>com.sap.cloud.s4hana.quality</groupId>
             <artifactId>listeners-all</artifactId>
             <scope>test</scope>
         </dependency>
@@ -107,20 +107,17 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
-            <version>4.3.1</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.tomee</groupId>
             <artifactId>arquillian-tomee-embedded</artifactId>
             <scope>test</scope>
-            <version>8.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-embedded</artifactId>
             <scope>test</scope>
-            <version>8.0.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -136,7 +133,6 @@
             <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-jaxrs</artifactId>
             <scope>test</scope>
-            <version>8.0.3</version>
         </dependency>
     </dependencies>
 
@@ -145,7 +141,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.2</version>
                 <configuration>
                     <destFile>${jacoco.executionDataFile}</destFile>
                     <dataFile>${jacoco.executionDataFile}</dataFile>
@@ -165,7 +161,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <skipTests>${surefire.skipTests}</skipTests>
                     <includes>
