--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <name>address-manager - Root</name>
     <description>address-manager - Root</description>
 
-    <groupId>com.sap.cloud.sdk.examples</groupId>
+    <groupId>com.sap.cloud.s4hana.examples</groupId>
     <artifactId>address-manager</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
@@ -14,9 +14,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.sap.cloud.sdk</groupId>
+                <groupId>com.sap.cloud.s4hana</groupId>
                 <artifactId>sdk-bom</artifactId>
-                <version>3.24.0</version>
+                <version>2.9.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
