--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.sap.cloud.s4hana</groupId>
+                <groupId>com.sap.cloud.sdk</groupId>
                 <artifactId>sdk-bom</artifactId>
-                <version>2.9.0</version>
+                <version>3.24.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -43,25 +43,52 @@
     </modules>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>3.13.0</version>
+                    <configuration>
+                        <rulesets>
+                            <ruleset>rulesets/cloud-sdk-qualities.xml</ruleset>
+                            <ruleset>rulesets/java/maven-pmd-plugin-default.xml</ruleset>
+                        </rulesets>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.sap.cloud.sdk.quality</groupId>
+                            <artifactId>pmd-rules</artifactId>
+                            <version>3.24.0</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
-                        <id>SAP S/4HANA Cloud SDK Project Structure Checks</id>
+                        <id>SAP Cloud SDK Project Structure Checks</id>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>3.3.9</version>
+                                    <version>3.5</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
                                     <version>${java.version}</version>
                                 </requireJavaVersion>
+                                <requireProperty>
+                                    <property>project.artifactId</property>
+                                    <regex>[^_]+</regex>
+                                    <regexMessage>"The artifactId should not contain underscores (_) as this causes issues when deploying to Cloud Foundry."</regexMessage>
+                                </requireProperty>
                                 <reactorModuleConvergence />
                             </rules>
                             <fail>true</fail>
