--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -30,3 +30,5 @@ steps:
     space: infra-testing
     appName: 'devops-docker-images-IT'
     manifest: manifest.yml
+  mavenExecute:
+    dockerImage: 'maven:3.6.3-jdk-11'
