--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -20,6 +20,8 @@ steps:
   tmsUpload:
     namedUser: 'CLOUD_SDK_PIPELINE'
 stages:
+  Confirm:
+    manualConfirmation: false
   Release:
     lockingResource: 'release'
     stageLocking: true
