--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -3,16 +3,5 @@ general:
   collectTelemetryData: false
 steps:
   executeNpm:
-    dockerImage: 's4sdk/docker-node-browsers:v15'
+    dockerImage: 'ghcr.io/sap/ppiper-node-browsers:v8'
 stages:
-  npmAudit:
-    auditedAdvisories:
-      - "146"
-      - "593"
-      - "607"
-      - "803"
-      - "886"
-      - "1068"
-      - "1070"
-      - "1184"
-      - "1213"
