--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,5 +1,5 @@
 general:
-  productiveBranch: 'infrastructure-integration-test-no-deployment'
+  productiveBranch: 'validate-cx-server-gpp'
   collectTelemetryData: false
   buildTool: 'maven'
 steps:
